--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
